# titanic-survival-prediction

./: README.md  main.py  pyproject.toml
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/.ipynb_checkpoints/: test_error-checkpoint.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
data/: data_preparation.ipynb
data/fe/: y_train.csv
data/fe/.ipynb_checkpoints/: X_test_fe-checkpoint.csv  X_train_fe-checkpoint.csv
data/processed/: X_test.csv
data/processed/.ipynb_checkpoints/: X_train-checkpoint.csv
eda/: eda_fe.ipynb  eda_overview.ipynb
features/: feature_engineering.ipynb
models/: baseline_decision_tree.ipynb  catboost_baseline.ipynb  catboost_with_fe_optuna.ipynb  lgbm_with_fe_randomsearch.ipynb  logistic_classifier.ipynb  ridge_classifier.ipynb  tree_with_fe_cv.ipynb  xgb_with_fe_randomsearch.ipynb
models/.ipynb_checkpoints/: baseline_decision_tree-checkpoint.ipynb  tree_with_fe_cv-checkpoint.ipynb
